# frete-sistema

./: .cursorrules  .env.pluggy.example  .env.render  .flake8  .gitignore  .nlp_models_installed  ACOES_PRIORITARIAS.md  AJUSTES_CTES_PENDENTES.md  AJUSTES_FINALIZADOS_RELATORIO.md  AJUSTES_VISUAIS_ETAPA3.md  ALTERACOES_AGENDAMENTO_CARTEIRA.md  ANALISE_ARQUITETURA_REAL.json  ANALISE_CAOS_RENDERIZACAO_CARDS.md  ANALISE_CLAUDE_RECONHECENDO_ERRO.md  ANALISE_COMPARATIVA_CLAUDE_SISTEMAS.md  ANALISE_COMPARATIVA_MAPEAMENTOS.md  ANALISE_CORRECAO_PORTAL_ATACADAO.md  ANALISE_DEPENDENCIAS_FLASK_20250708_202417.json  ANALISE_DETALHADA_MODULO_DATA.md  ANALISE_ERRO_MERCADAO.md  ANALISE_ESTRATEGICA_CLAUDE_AI_NOVO.md  ANALISE_FECHAR_FRETE_UNIFICACAO.md  ANALISE_FLUXO_AGRUPADOS_BALANCEADO.md  ANALISE_FLUXO_COMPLETO_ERROS.md  ANALISE_FLUXO_FATURAMENTO.md  ANALISE_FUNCAO_APLICAR_REDUCAO_QUANTIDADE.md  ANALISE_GAPS_CARTEIRA_SEPARACAO.md  ANALISE_GAPS_SISTEMA_COMPLETO.md  ANALISE_IMPACTO_REMOCAO_PRODUTOS.md  ANALISE_IMPORTACAO_TAGPLUS_ESTOQUE.md  ANALISE_INCONSISTENCIA_TENDA.md  ANALISE_LIMPEZA_CARTEIRA.md  ANALISE_MODULO_FRETES.md  ANALISE_PROBLEMAS_CLAUDE_AI.md  ANALISE_PROBLEMA_PROD_HOJE.md  ANALISE_PROFUNDA_CLASSES_CARTEIRA.md  ANALISE_REDUNDANCIAS_COTACAO.md  ANALISE_REDUNDANCIAS_JS.md  ANALISE_REDUNDANCIA_LOADERS.py  ANALISE_REFATORACAO_CLAUDE_AI.md  (+1398 more)
.claire/: REDESIGN_CARVIA_ESTADO.md  gap_analysis_agente_web_2026-06-19.md  rascunho.md
.claude/: AJUSTE_DEVOLUCAO.md  AUDITORIA_FRICTION_ANALYZER.md  AUDITORIA_SKILLS_2026-05-29.md  AUDITORIA_SKILLS_PLANO_EXECUCAO.md  CLAUDE.md  CONTEXTO_AGENT_04_02.md  CONTEXTO_AGENT_06_03.md  DOC-1.md  DOC-2.md  EVOLUCAO_MEMORIA.md  PRD_V2_AGENT_SDK.md  RELATORIO_AUDITORIA_FRICTION_ANALYZER.md  SUMARIO_FRICTION_ANALYZER.txt  TODO.md  aplicacao_aristotelica.md  avaliacao_agent_prompt_agent.md  (+11 more)
(+9260 files in other folders)
