[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frete-sistema"
version = "1.0.0"
description = "Sistema de Gestão de Fretes"
readme = "README.md"
requires-python = ">=3.8"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
